<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="@dimen/_16sdp"
    android:layout_marginBottom="@dimen/_16sdp"
    app:cardBackgroundColor="@color/Dark_Slate_gray"
    app:cardElevation="0dp"
    app:strokeColor="@color/Zomp"
    app:strokeWidth="1dp"
    app:cardCornerRadius="@dimen/_8sdp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Dark_Slate_gray"
        android:padding="@dimen/_16sdp">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageIcon"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:minHeight="@dimen/_80sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textTemperature"
            android:gravity="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="@dimen/_48ssp"
            app:layout_constraintBottom_toBottomOf="@id/imageIcon"
            app:layout_constraintStart_toEndOf="@id/imageIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageIcon"
            tools:text="27\u2103"/>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardVento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:cardBackgroundColor="@color/Redwood"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toStartOf="@id/cardUmidità"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/imageIcon"
            app:layout_constraintTop_toBottomOf="@id/imageIcon"
            app:strokeColor="@color/Zomp"
            app:strokeWidth="1dp">
    
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_4sdp">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:src="@drawable/outline_air_24"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/vento"
                    android:textSize="@dimen/_10ssp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textVento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_15_km_h"
                    android:textStyle="bold"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardUmidità"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:cardBackgroundColor="@color/Redwood"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardVento"
            app:layout_constraintEnd_toStartOf="@id/cardProbabilitàPioggia"
            app:layout_constraintTop_toBottomOf="@id/imageIcon"
            app:strokeColor="@color/Zomp"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:src="@drawable/humidity_mid_24px"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/umidit"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textUmidità"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_25"
                    android:textStyle="bold"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardProbabilitàPioggia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            app:cardBackgroundColor="@color/Redwood"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardUmidità"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageIcon"
            app:strokeColor="@color/Zomp"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:src="@drawable/rainy_24px"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/probabilit_pioggia"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/black"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textProbPioggia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_38"
                    android:textStyle="bold"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>

        

</com.google.android.material.card.MaterialCardView>