<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grigioBello">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="@dimen/_60sdp"
        app:cardBackgroundColor="@color/Dark_Slate_gray"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cardRisposta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/Zomp"
        app:strokeWidth="1dp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/di_seguito_apparir_cosa_dovresti_indossare_n_a_seconda_del_meteo_la_risposta_stata_generata_da_chatgpt"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardRisposta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        app:cardBackgroundColor="@color/Dark_Slate_gray"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/Zomp"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_350sdp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_4sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_gravity="start"
                android:src="@drawable/chat_24px" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textRispostaAI"
                android:layout_width="match_parent"
                android:layout_height="374dp"
                android:gravity="center"
                android:text="@string/risposta"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/questa_la_risposta_data_dall_intelligenza_artificiale_spero_ti_abbia_soddisfatto"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/Dark_Slate_gray"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardRisposta"
        app:strokeColor="@color/Zomp"
        app:strokeWidth="1dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>